# loomterm

./: .gitignore  .mcp.json  Cargo.toml  DOGFOOD.md  IDEA.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md
.claude/: settings.json
.codex/: config.toml
.github/workflows/: ci.yml  pages.yml  release.yml
demo/: live-agent.sh  live.tape
docs/: index.html  replay-codex.html  replay.html
scripts/: codex-smoke.sh  create-demo-fixture.sh  record-live-demo.sh  smoke-ui-tmux.sh  smoke-watch-tmux.sh  update-homebrew-formula.sh
src/: agent.rs  client.rs  config.rs  daemon.rs  error.rs  executor.rs  lib.rs  mcp.rs  model.rs  onboarding.rs  protocol.rs  session.rs  store.rs  supervisor.rs  terminal.rs  ui.rs  watch.rs
tests/: binaries.rs  runtime.rs
