[package]
name = "loomterm"
version = "0.1.0"
edition = "2024"
description = "A durable, structured execution runtime for coding agents"
license = "MIT"

[dependencies]
base64 = "0.22"
bytes = "1.11"
clap = { version = "4.5", features = ["derive", "env"] }
directories = "6.0"
futures = "0.3"
nix = { version = "0.31", features = ["process", "signal", "socket", "user"] }
rmcp = { version = "2.2", features = ["server", "transport-io"] }
rusqlite = { version = "=0.39.0", features = ["bundled"] }
schemars = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.52", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.18", features = ["serde", "v7"] }
url = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.20"

[profile.release]
lto = "thin"
strip = true
